package core.income

class Income {
}